get, post, put, delete requests added with validation and error handling
