# swagger.json
@@ -1,77 +1,161 @@
 {
-    "swagger": "2.0",
-    "info": {
-      "title": "My Contacts API",
-      "description": "Use this to access my list of lego sets",
-      "version": "1.0.0"
-    },
-    "host": "lego-sw-collection.onrender.com",
-    "basePath": "/",
-    "schemes": [
-      "https"
-    ],
-    "paths": {
-      "/legoSets/": {
-        "get": {
-          "description": "Get all lego sets in collection",
-          "produces": [
-            "application/json"
-          ],
-          "responses": {
-            "200": {
-              "description": "OK"
-            }
+  "swagger": "2.0",
+  "info": {
+    "title": "My Contacts API",
+    "description": "Use this to access my list of contacts",
+    "version": "1.0.0"
+  },
+  "host": "localhost:8080",
+  "basePath": "/",
+  "schemes": [
+    "http"
+  ],
+  "paths": {
+    "/legoSets/": {
+      "get": {
+        "description": "Retrieve all Lego sets",
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
           }
-        },
-        "post": {
-          "description": "Add a new set to collection",
-          "parameters": [
-            {
-                "name": "body",
-                "in": "body",
-                "schema": {
-                    "type": "object",
-                    "required": ["setNumber", "name", "pieceCount", "price", "characters", "built", "purchaseDate"],
-                    "properties": {
-                        "setNumber": {
-                            "example": "70707"
-                        },
-                        "name": {
-                            "example": "Jabba's Palace"
-                        },
-                        "pieceCount": {
-                            "example": 1000
-                        },
-                        "price": {
-                            "example": 89.99
-                        },
-                        "characters": {
-                            "type": "array",
-                            "items": {
-                              "type": "string"
-                            },
-                            "example": ["Jabba", "Gammorean Guard", "Princess Leia"]
+        }
+      },
+      "post": {
+        "description": "Create a new Lego set. All fields required.",
+        "parameters": [
+          {
+              "name": "body",
+              "in": "body",
+              "schema": {
+                  "type": "object",
+                  "required": ["setNumber", "name", "pieceCount", "price", "characters", "built", "purchaseDate"],
+                  "properties": {
+                      "setNumber": {
+                          "example": "70707"
+                      },
+                      "name": {
+                          "example": "Jabba's Palace"
+                      },
+                      "pieceCount": {
+                          "example": 1000
+                      },
+                      "price": {
+                          "example": 89.99
+                      },
+                      "characters": {
+                          "type": "array",
+                          "items": {
+                            "type": "string"
                           },
-                        "built": 
-                        {
-                            "example": true
+                          "example": ["Jabba", "Gammorean Guard", "Princess Leia"]
                         },
-                        "purchaseDate": {
-                            "example": "01-01-2020"
-                        }
+                      "built": 
+                      {
+                          "example": true
+                      },
+                      "purchaseDate": {
+                          "example": "01-01-2020"
+                      }
+                  }
+              }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Set created successfully"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/legoSets/{setId}": {
+      "put": {
+        "description": "Update a Lego set. Only setId is required",
+        "parameters": [
+          {
+            "name": "setId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+                "type": "object",
+                "properties": {
+                    "setNumber": {
+                        "example": "70707"
+                    },
+                    "name": {
+                        "example": "Jabba's Palace"
+                    },
+                    "pieceCount": {
+                        "example": 1000
+                    },
+                    "price": {
+                        "example": 89.99
+                    },
+                    "characters": {
+                        "type": "array",
+                        "items": {
+                          "type": "string"
+                        },
+                        "example": ["Jabba", "Gammorean Guard", "Princess Leia"]
+                      },
+                    "built": 
+                    {
+                        "example": true
+                    },
+                    "purchaseDate": {
+                        "example": "01-01-2020"
                     }
                 }
             }
-          ],
-          "responses": {
-            "201": {
-              "description": "Added successfully"
-            },
-            "500": {
-              "description": "Internal Server Error"
-            }
+        }
+        ],
+        "responses": {
+          "204": {
+            "description": "Set updated successfully"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "description": "Delete Lego set. The setId is required.",
+        "parameters": [
+          {
+            "name": "setId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK: Deleted successfully"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
     }
   }
+}
